add weight and update disc model
