# models/disc.go
@@ -1,10 +1,26 @@
 package models
 
 type Disc struct {
-	Id   int    `json:"id"`
-	Name string `json:"name"`
+	Id            int         `json:"id"`
+	Name          string      `json:"name"`
+	Distributor   string      `json:"distributor"`
+	MaxWeight     Measurement `json:"maxWeight"`
+	Diameter      Measurement `json:"diameter"`
+	Height        Measurement `json:"height"`
+	RimDepth      Measurement `json:"rimDepth"`
+	Speed         int         `json:"speed"`
+	Glide         int         `json:"glide"`
+	Turn          int         `json:"turn"`
+	Fade          int         `json:"fade"`
+	Stability     string      `json:"stability"`
+	PrimaryUse    string      `json:"primaryUse"`
+	PlasticGrades []string    `json:"plasticGrades"`
+}
+
+type DiscsResponse struct {
+	Discs []Disc `json:"discs"`
 }
 
 type DiscResponse struct {
-	Discs []Disc `json:"disc"`
+	Disc Disc `json:"disc"`
 }
